--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container">
+    <div class="row align-items-center">
+        <!-- Text Column -->
+        <div class="col-md-6 my-5">
+            <h2>Your Heading Here</h2>
+            <p>Your text content goes here. This text will be aligned to the left side of the screen.</p>
+        </div>
+        <!-- Image Column -->
+        <div class="col-md-6 text-md-end my-5">
+            <img src="https://placehold.co/600x600" class="img-fluid" alt="Description of image">
+        </div>
+    </div>
+</div>
