--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">YourAppName</a>
+        <%= link_to 'YourAppName', root_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
+                <% if user_signed_in? %>
                 <li class="nav-item">
                     <%= link_to 'Home', root_path, class: 'nav-link' %>
                 </li>
+                <% end %>
                 <!-- Add more navigation links as needed -->
             </ul>
+            <%= link_to 'Get Started!', new_session_path, class: 'btn btn-primary' %>
         </div>
     </div>
 </nav>
