--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<%= form_with model: @user, url: registration_path, local: true do |form| %>
+<%= form_with model: @user, url: registrations_path, local: true do |form| %>
 <div>
     <%= form.label :email_address %>
     <%= form.email_field :email_address, required: true, autofocus: true %>
@@ -14,6 +14,6 @@
     <%= form.password_field :password_confirmation, required: true %>
 </div>
 <div>
-    <%= form.submit 'Sign Up' %>
+    <%= form.submit "Sign Up" %>
 </div>
 <% end %>
