--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,7 @@
+<!-- app/views/shared/_nav.html.erb -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <%= link_to 'YourAppName', root_path, class: 'navbar-brand' %>
+        <%= link_to 'StudyApp', root_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,10 +11,18 @@
                 <li class="nav-item">
                     <%= link_to 'Home', root_path, class: 'nav-link' %>
                 </li>
+                <li class="nav-item">
+                    <%= link_to 'Profile', profile_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= button_to 'Logout', logout_path, method: :delete, class: 'nav-link' %>
+                </li>
+                <% else %>
+                <li class="nav-item">
+                    <%= link_to 'Get Started!', new_session_path, class: 'btn btn-primary' %>
+                </li>
                 <% end %>
-                <!-- Add more navigation links as needed -->
             </ul>
-            <%= link_to 'Get Started!', new_session_path, class: 'btn btn-primary' %>
         </div>
     </div>
 </nav>
