--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,6 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <% if user_signed_in? %>
+                <p>Logged in as: <%= current_user.email_address %></p>
                 <li class="nav-item">
                     <%= link_to 'Home', root_path, class: 'nav-link' %>
                 </li>
@@ -15,9 +16,13 @@
                     <%= link_to 'Profile', profile_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
+                    <%= link_to 'My Library', library_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
                     <%= button_to 'Logout', logout_path, method: :delete, class: 'nav-link' %>
                 </li>
                 <% else %>
+                <p>Not signed in</p>
                 <li class="nav-item">
                     <%= link_to 'Get Started!', new_session_path, class: 'btn btn-primary' %>
                 </li>
