--- a/app/views/flashcard_sets/edit.html.erb
+++ b/app/views/flashcard_sets/edit.html.erb
@@ -1,5 +1,59 @@
 <h1>Edit Flashcard Set</h1>
 
-<%= render 'form', flashcard_set: @flashcard_set %>
+<%= form_with model: @flashcard_set, local: true do |f| %>
+<div class="field">
+    <%= f.label :title %>
+    <%= f.text_field :title, required: true %>
+</div>
 
-<%= link_to 'Cancel', flashcard_set_path(@flashcard_set), class: 'btn btn-secondary' %>
+<div class="field">
+    <%= f.label :description %>
+    <%= f.text_area :description, required: true %>
+</div>
+
+<div class="field">
+    <%= f.label :visibility %>
+    <%= f.select :visibility, [['Public', 'public'], ['Private', 'private']] %>
+</div>
+
+<h2>Edit Flashcards</h2>
+<ul>
+    <%= f.fields_for :flashcards do |flashcard_form| %>
+    <li>
+        <div>
+            <%= flashcard_form.label :question, "Question" %>
+            <%= flashcard_form.text_area :question, required: true %>
+        </div>
+        <div>
+            <%= flashcard_form.label :answer, "Answer" %>
+            <%= flashcard_form.text_area :answer, required: true %>
+        </div>
+        <div>
+            <%= flashcard_form.check_box :_destroy %>
+            <%= flashcard_form.label :_destroy, "Remove this flashcard" %>
+        </div>
+    </li>
+    <% end %>
+</ul>
+
+<h3>Add a New Flashcard</h3>
+<div class="flashcard">
+    <%= f.fields_for :flashcards, @flashcard_set.flashcards.build do |new_flashcard_form| %>
+    <div>
+        <%= new_flashcard_form.label :question, "Question" %>
+        <%= new_flashcard_form.text_area :question, required: true %>
+    </div>
+    <div>
+        <%= new_flashcard_form.label :answer, "Answer" %>
+        <%= new_flashcard_form.text_area :answer, required: true %>
+    </div>
+    <% end %>
+</div>
+
+<div class="actions">
+    <%= f.submit "Save Changes", class: "btn btn-success" %>
+</div>
+<% end %>
+
+<%= link_to 'Back to Flashcard Sets', flashcard_sets_path, class: 'btn btn-secondary' %>
+<%= button_to 'Delete Flashcard Set', flashcard_set_path(@flashcard_set), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-danger' %>
