--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
 
     <%# Not sure on the importance of the stylesheet below. Uncomment this if needed.%>
-    <%# stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <% stylesheet_link_tag :app, "data-turbo-track": "reload" %>
 
     <%= javascript_importmap_tags %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
