Added a pop up to the delete button for each indvidual flash card to stop the user from accidently destroying a card.

--- a/app/views/flashcard_sets/_flashcard_fields.html.erb
+++ b/app/views/flashcard_sets/_flashcard_fields.html.erb
@@ -7,10 +7,32 @@
         <%= f.label :answer, 'Answer' %>
         <%= f.text_area :answer, required: true %>
     </div>
-
     <%= f.hidden_field :_destroy, class: 'destroy_field' %>
-
     <div class="actions">
-        <%= link_to_remove_association 'Remove Flashcard', f, class: 'btn btn-danger' %>
+        <!-- Replace the direct remove link with a button that triggers the modal -->
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteFlashcardModal<%= f.object.id || 'new' %>">
+            Remove Flashcard
+        </button>
+
+        <!-- Modal for this specific flashcard -->
+        <div class="modal fade" id="deleteFlashcardModal<%= f.object.id || 'new' %>" tabindex="-1" aria-labelledby="deleteFlashcardModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteFlashcardModalLabel">Confirm Deletion</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to remove this flashcard?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <%= link_to_remove_association 'Delete', f, 
+                            class: 'btn btn-danger',
+                            data: { bs_dismiss: 'modal' } %>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
