--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,4 @@
+<%#/Users/tylerfedrick/studyapp/app/views/shared/_flash_messages.html.erb %>
 <% flash.each do |type, message| %>
 <div class="alert alert-<%= type %>">
     <%= message %>
