--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,11 @@
     <div class="row align-items-center">
         <!-- Text Column -->
         <div class="col-md-6 my-5">
-            <h2>Your Heading Here</h2>
-            <p>Your text content goes here. This text will be aligned to the left side of the screen.</p>
+            <h2 class="text-center">Where Learning Meets Fun: <br> Flashcards, Games, and More!</h2>
+            <div class="d-grid gap-2">
+                <%= link_to 'Get Started!', new_registration_path, class: 'btn btn-primary' %>
+                <%= link_to 'Log In', new_session_path, class: 'btn btn-secondary' %>
+            </div>
         </div>
         <!-- Image Column -->
         <div class="col-md-6 text-md-end my-5">
